:sparkles: new service for getting catalogs
