# docs/swagger/swagger.json
@@ -7,6 +7,26 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/catalog": {
+            "get": {
+                "description": "Get catalog",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "catalog"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "description": "Login to i-Ma'luum",
@@ -29,6 +49,26 @@
                             "$ref": "#/definitions/dtos.LoginDTO"
                         }
                     }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/result": {
+            "get": {
+                "description": "Get result from i-Ma'luum",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "scraper"
                 ],
                 "responses": {
                     "200": {
